--- a/inputinfo.css
+++ b/inputinfo.css
@@ -11,11 +11,13 @@
 }
 
 .title {
-    font-size: 14px;
     padding-top: 8px;
     padding-left: 25px;
     font-weight: normal;
+    font-size: 20px;
     color: #FFFFFF;
+    font-family: 'DIN Next Slab W01 Heavy','Georgia',Times,serif;
+
 }
 
 .nav{
