--- a/main.css
+++ b/main.css
@@ -228,15 +228,30 @@ button {
 }
 
 .nav_right_2 a:link,.nav_right_2 a:visited{
-    color: #000000;
-    background-color: #FFFFFF;
+    color: #FFFFFF;
+    background-color: #be3948;
 }
 
 .nav_right_2 a:hover,.nav_right_2 a:active{
-    color: #FFFFFF;
-    background-color: #be3948;
+    opacity: 0.9;
 }
 .keepintouch {
     float:right;
     display:inline-block;
 }
+
+.title2{
+    height: 35px;
+    width: 100%;
+    text-align: center;
+}
+
+.title2 a{
+    line-height: 35px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #be3948;
+    /*padding-left: 20px;*/
+    text-align: center;
+}
+
