--- a/main.css
+++ b/main.css
@@ -86,6 +86,7 @@ button {
     float: left;
     height: 120px;
     width: 250px;
+    margin-top: 30px;
     margin-left: 120px;
     border-radius: 50px;
     border-width: 10px;
